# qrcode-widget

./: CMakeLists.txt
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/application/: CMakeLists.txt  main.cpp  qrcode_widget.cpp  qrcode_widget.h
